tests/ui/attr-duplicate.stderr
error: duplicate rename attribute
 --> tests/ui/attr-duplicate.rs:5:27
  |
3 | #[derive(Serialize)]
  |          --------- in this derive macro expansion
4 | struct Struct {
5 |     #[serde(rename = "A", rename = "B")]
  |                           ^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)
